<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/general_back_color"
    >
    <!--android:background="@color/general_back_color"-->
    <!--android:background="@color/general_back_color"-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical" >
        <!--&lt;!&ndash; 高德账户 &ndash;&gt;-->
        <!--<com.autonavi.xmgd.view.GDTitle-->
            <!--android:id="@+id/gdaccout_title"-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="@dimen/gdtitle_height" />-->\

        <include
            android:id="@+id/login_head"
            layout="@layout/title_login_layout"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/auto_about_10dp">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/logo"
                android:layout_centerHorizontal="true"/>

        </RelativeLayout>



        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" >

                <!--<LinearLayout-->
                    <!--android:layout_width="match_parent"-->
                    <!--android:layout_height="wrap_content"-->
                    <!--android:orientation="horizontal">-->

                    <!--<ImageView-->
                        <!--android:layout_width="wrap_content"-->
                        <!--android:layout_height="wrap_content"-->
                        <!--android:src="@drawable/login_user"-->
                        <!--/>-->

                    <!--<EditText-->
                        <!--android:id="@+id/gdaccout_edit_account"-->
                        <!--style="@style/gdaccount_edittext_style"-->
                        <!--android:hint="请输入用户名"-->
                        <!--android:imeOptions="actionNext"-->
                        <!--android:inputType="number"-->
                        <!--android:maxLength="11"-->
                        <!--android:text="test_lytest001"-->
                        <!--android:phoneNumber="true" />-->

                <!--</LinearLayout>-->

                <EditText
                    android:id="@+id/gdaccout_edit_account"
                    style="@style/gdaccount_edittext_style"
                    android:hint="请输入用户名"
                    android:imeOptions="actionNext"
                     />

                <!--
                android:maxLength="11"
                android:phoneNumber="true"
                android:inputType="number"
                android:text="test_lytest001"-->

                <EditText
                    android:id="@+id/gdaccout_edit_password"
                    style="@style/gdaccount_edittext_password_style"
                    android:hint="@string/gdaccount_hint_password"
                    android:imeOptions="actionDone"
                    android:maxLength="30"
                    android:password="true" />
                <!--android:text="000000"-->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal" >
                    <!--<CheckBox-->
                        <!--android:id="@+id/gdaccount_checkbox_show_pwd"-->
                        <!--android:layout_width="wrap_content"-->
                        <!--android:layout_height="wrap_content"-->
                        <!--android:layout_gravity="center_vertical"-->
                        <!--android:layout_marginLeft="5dip"-->
                        <!--android:layout_marginRight="5dip"-->
                        <!--android:button="@drawable/checkbox_style" />-->

                    <CheckBox
                        android:id="@+id/gdaccount_checkbox_show_pwd"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_margin="10dip"
                        android:button="@drawable/v4_common_checkbox_selector"
                        />


                    <TextView
                        android:id="@+id/gdaccount_show_password_tv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:text="@string/gdaccount_show_password"
                        android:textColor="@color/gdaccount_show_password_tv_textcolor"
                        android:textSize="15sp" />
                </LinearLayout>

                <!-- 登录 -->
                <Button
                    android:id="@+id/gdaccout_bt_login"
                    style="@style/gdaccount_button_style"
                    android:layout_width="match_parent"
                    android:layout_marginBottom="10dip"
                    android:layout_marginTop="10dip"
                    android:layout_weight="1"
                    android:text="@string/gdaccount_login"
                    android:textSize="16dp"
                    android:textColor="@color/white"
                    android:background="#1c9d17"
                    />

                <!--<LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    >
                    &lt;!&ndash; 注册新账户 &ndash;&gt;
                    <Button
                        android:id="@+id/gdaccout_bt_add_accout"
                        style="@style/gdaccount_button_style"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_marginBottom="10dip"
                        android:layout_marginTop="10dip"
                        android:layout_weight="1"
                        android:text="@string/gdaccount_register"
                        />
                    &lt;!&ndash; style="@style/gdaccount_button_style"&ndash;&gt;

                </LinearLayout>-->

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:visibility="gone">

                    <!-- 忘记密码 -->
                    <TextView
                        android:id="@+id/gdaccout_bt_forget_password"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dip"
                        android:layout_marginTop="10dip"
                        android:text="@string/gdaccount_forget_password"
                        android:textColor="@color/gdaccout_bt_forget_password_textcolor"
                        android:textSize="15sp" />

                    <View
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1" />

                    <TextView
                        android:id="@+id/gdaccout_bt_add_accout"
                        android:layout_marginTop="10dip"
                        android:text="@string/gdaccount_register"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="10dip"
                        android:textColor="@color/gdaccout_bt_forget_password_textcolor"
                        android:textSize="15sp"
                        />

                </LinearLayout>
            </LinearLayout>
        </ScrollView>
    </LinearLayout>
</RelativeLayout>